# Math

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Include/: BezierCurve.hpp  Circle.cpp  Circle.hpp  Mat3.hpp  Mat4.hpp  Transform.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
Source/: BezierCurve.cpp  Mat3.cpp  Mat4.cpp  Transform.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
